[gd_scene load_steps=4 format=3 uid="uid://dhraaqfxt8rpw"]

[ext_resource type="Script" path="res://scenes/interactableCharacter/interaction_window.gd" id="1_t7ovg"]
[ext_resource type="Texture2D" uid="uid://bd8w2ny4qenjh" path="res://scenes/interactableCharacter/HackButton.png" id="2_36p0u"]
[ext_resource type="Texture2D" uid="uid://yt8klxljy2sv" path="res://scenes/interactableCharacter/TalkButton.png" id="3_ka2m2"]

[node name="InteractionWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t7ovg")

[node name="Hack" type="Button" parent="."]
layout_mode = 0
offset_left = 386.0
offset_top = 258.0
offset_right = 778.0
offset_bottom = 579.0
scale = Vector2(0.2, 0.2)
icon = ExtResource("2_36p0u")
flat = true

[node name="Talk" type="Button" parent="."]
layout_mode = 0
offset_left = 528.0
offset_top = 257.0
offset_right = 919.0
offset_bottom = 586.0
scale = Vector2(0.2, 0.2)
icon = ExtResource("3_ka2m2")
flat = true

[node name="HackWindow" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = -1.0
offset_top = 2.0
offset_right = 1150.0
offset_bottom = 649.0

[node name="Sprite2D" type="Sprite2D" parent="HackWindow"]

[node name="SuccesfulHackButton" type="Button" parent="HackWindow"]
layout_mode = 0
offset_left = 378.0
offset_top = 182.0
offset_right = 626.0
offset_bottom = 216.0
text = "Взломать"

[node name="RiddleAnswer" type="TextEdit" parent="HackWindow"]
layout_mode = 0
offset_left = 373.0
offset_top = 150.0
offset_right = 634.0
offset_bottom = 175.0

[node name="RiddleText" type="RichTextLabel" parent="HackWindow"]
layout_mode = 0
offset_left = 392.0
offset_top = 78.0
offset_right = 628.0
offset_bottom = 135.0

[node name="TalkWindow" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = -1.0
offset_right = 1145.0
offset_bottom = 647.0

[connection signal="button_down" from="Hack" to="." method="pressed_hacked"]
[connection signal="mouse_entered" from="Hack" to="." method="mouse_on_button"]
[connection signal="mouse_exited" from="Hack" to="." method="mouse_off_button"]
[connection signal="button_down" from="Talk" to="." method="pressed_talk"]
[connection signal="mouse_entered" from="Talk" to="." method="mouse_on_button"]
[connection signal="mouse_exited" from="Talk" to="." method="mouse_off_button"]
[connection signal="button_down" from="HackWindow/SuccesfulHackButton" to="." method="on_hack_attempt"]
[connection signal="mouse_entered" from="HackWindow/SuccesfulHackButton" to="." method="mouse_on_button"]
[connection signal="mouse_exited" from="HackWindow/SuccesfulHackButton" to="." method="mouse_off_button"]
[connection signal="mouse_entered" from="HackWindow/RiddleAnswer" to="." method="mouse_on_button"]
[connection signal="mouse_exited" from="HackWindow/RiddleAnswer" to="." method="mouse_off_button"]
